--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <integer name="user_timeout">10000</integer>
 
     <string name="app_name">Horoscope</string>
-    <string name="version_name">3.0 Alpha</string>
+    <string name="version_name">3.0 Release b1</string>
     
     <string name="app_name_to_upper_case">HOROSCOPE</string>
     <string name="application_to_upper_case">APPLICATION</string>
