--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -12,6 +12,7 @@
     <string name="first_launch_message">In den Einstellungen können Sie die Schriftgröße und den Hintergrund ändern.</string>
     
     <string name="error_message">Überprüfen Sie Ihre Verbindung und versuchen Sie es erneut.</string>
+    <string name="error_message_sumarry">Wenn der Fehler weiterhin besteht, müssen Sie die Anwendung über Google Play aktualisieren.\nWenn das Update nicht verfügbar ist, melden Sie dies dem Entwickler über eine beliebige Form von Feedback.</string>
     <string name="error_retry">wiederholen</string>
     
     <string name="male">Ein Mann</string>
