--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -12,6 +12,7 @@
     <string name="first_launch_message">В настройках вы можете изменить размер шрифта и фон.</string>
     
     <string name="error_message">Проверьте ваше подключение к сети, и попробуйте снова.</string>
+    <string name="error_message_sumarry">Если ошибка повторяется, необходимо обновить приложение, через Google Play.\nЕсли обновление недоступно сообщите об этом разработчику через любую форму связи.</string>
     <string name="error_retry">Попробовать снова</string>
     
     <string name="male">Мужчина</string>
