--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -56,9 +56,12 @@
     
     <string name="ok">Ok</string>
     <string name="cancel">Отмена</string>
+    <string name="ok_later">Позже</string>
+    <string name="cancel_rate">Я не хочу</string>
     
     <string name="start">Начать!</string>
     <string name="loveapp">Нравится это приложение?</string>
+    <string name="rate_app">Оцените приложение!</string>
     <string name="googleplay">Google Play</string>
     <string name="googleplay_summary">Оставьте отзыв на Google Play</string>
     <string name="share">Поделиться</string>
