--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -12,8 +12,10 @@
     <string name="first_launch_message">En la configuración puede cambiar el tamaño de la fuente y el fondo.</string>
     
     <string name="error_message">Compruebe su conexión de red y vuelva a intentarlo.</string>
-    <string name="error_message_sumarry">Si el error persiste, debe actualizar la aplicación a través de Google Play.\nSi la actualización no está disponible, infórmeselo al desarrollador a través de cualquier forma de comentarios.</string>
+    <string name="error_message_sumarry">Si el error persiste, debe actualizar la aplicación a través de Google Play.\nSi la actualización no está disponible, infórmeselo al desarrollador a través de cualquier forma de comentarios.\nPresiona el botón una vez más para intentar cargar con proxy.</string>
     <string name="error_retry">Inténtalo de nuevo</string>
+    <string name="proxy_setting_up">Determinando el servidor proxy para el destino elegido..</string>
+    <string name="proxy_settet_up">Proxy-server %1$s:%2$s determinado!\nPuede desactivar el proxy en la configuración.</string>
     
     <string name="male">Un hombre</string>
     <string name="female">Una mujer</string>
@@ -24,6 +26,7 @@
     <string name="preference_date_set">Parece que el %1$s es tu signo del zodiaco, la %2$s es tu signo del zodiaco chino, %3$d es tu número de camino.</string>
     <string name="preference_zodiac_sign_1">Muestra del zodiaco</string>
     <string name="preference_language_1">Lengua de</string>
+    <string name="preference_proxy">Proxy</string>
     
     <string name="preference_notifications">Notificación</string>
     <string name="preference_show_notification_1">Mostrar notificaciones</string>
