--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -10,6 +10,7 @@
     
     <string name="introduce_slogan">Su asistente personal diaria</string>
     <string name="first_launch_message">En la configuración puede cambiar el tamaño de la fuente y el fondo.</string>
+    <string name="info_about_date_picker">Deslizar hacia arriba.</string>
     
     <string name="error_message">Compruebe su conexión de red y vuelva a intentarlo.</string>
     <string name="error_message_sumarry">Si el error persiste, debe actualizar la aplicación a través de Google Play.\nSi la actualización no está disponible, infórmeselo al desarrollador a través de cualquier forma de comentarios.\nPresiona el botón una vez más para intentar cargar con proxy.</string>
